# ghc-t20779

./: Lib.hs  README.md  ghc-bug.cabal
