cabal-version:      2.4
name:               ghc-bug
version:            0.1
build-type:         Simple
license:            BSD-3-Clause
synopsis:           A minimal reproduction of GHC#20779
description:        A minimal reproduction of GHC#20779.
category:           Testing
maintainer:         Ryan Scott <ryan.gl.scott@gmail.com>

source-repository head
  type:     git
  location: https://github.com/RyanGlScott/ghc-t20779

library
    exposed-modules:  Lib
    build-depends:    base < 5, base-orphans
    default-language: Haskell2010
